# alpha-paca

./: .gitignore  AGENTS.md  INVESTMENT_STRUCTURE.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: engine.py  models.py
backend/app/db/migrations/: env.py
backend/app/engine/: __init__.py  alpha_model.py  backtester.py  circuit_breaker.py  drift_detector.py  factor_model.py  genetic_evolver.py  kelly_sizer.py  signals.py
backend/app/engine/regime/: __init__.py  detector.py  models.py
backend/app/engine/risk/: __init__.py  factor_exposure.py  pod_overlap.py  portfolio_fsm.py  stress_test.py  var_engine.py
backend/app/engine/rl/: __init__.py  controller.py  environment.py  trainer.py
backend/app/execution/: __init__.py  fill_handler.py  order_manager.py  position_manager.py  tca.py
backend/app/models/: __init__.py  market_data.py  pod.py  portfolio.py  risk.py  signal.py  trade.py  validation.py
backend/app/routers/: auth.py  backtest.py  deps.py  health.py  pods.py  portfolio.py  positions.py  regime.py  risk.py  settings.py  signals.py  trades.py  ws.py
backend/app/services/: alpaca_client.py  fmp_client.py  hot_config.py  market_calendar.py  market_data.py  news_pipeline.py  rate_limiter.py  sec_edgar.py  settings_optimizer.py  universe_builder.py  watchlist_manager.py
backend/app/strategies/: __init__.py  base_pod.py
backend/app/strategies/event_driven/: __init__.py  (+4 more)
backend/app/tasks/: orchestrator.py  scheduler.py
backend/app/validators/: __init__.py  in_trade.py  pre_trade.py  risk_gate.py  system_watchdog.py
(+113 files in other folders)
